--- a/index.html
+++ b/index.html
@@ -149,16 +149,16 @@
       <div class="grid">
         <div>
           <div class="label">Email / 邮箱</div>
-          <div class="value"><a href="mailto:contact@yourcompany.com">contact@yourcompany.com</a></div>
+          <div class="value"><a href="mailto:postmaster@chuandazhinan.com">contact@yourcompany.com</a></div>
         </div>
         <div class="row">
           <div class="label">Phone / 电话</div>
-          <div class="value">+86-（请填写公司电话）</div>
+          <div class="value">+86-13726868698</div>
         </div>
 
         <div class="row">
           <div class="label">Address (CN) / 地址（中文）</div>
-          <div class="value">（请填写营业执照上的注册地址或办公地址）</div>
+          <div class="value">广州市白云区鹤正街1号2栋335室D105</div>
         </div>
         <div class="row">
           <div class="label">Address (EN) / Address (English)</div>
