--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <div class="grid">
         <div>
           <div class="label">Email / 邮箱</div>
-          <div class="value"><a href="mailto:postmaster@chuandazhinan.com">contact@yourcompany.com</a></div>
+          <div class="value"><a href="mailto:postmaster@chuandazhinan.com">postmaster@chuandazhinan.com</a></div>
         </div>
         <div class="row">
           <div class="label">Phone / 电话</div>
@@ -162,7 +162,7 @@
         </div>
         <div class="row">
           <div class="label">Address (EN) / Address (English)</div>
-          <div class="value">(Please fill in your registered/office address in English)</div>
+          <div class="value">D105, Room 335, Building 2, No. 1 Hezheng Street,Baiyun District, Guangzhou, China</div>
         </div>
       </div>
 
